ctm-sf-homeloan-app/main/default/objects/LoanContribution__c/LoanContribution__c.object-meta.xml
<CustomObject>
    <label>Loan Contribution</label>
    <nameField>
        <label>Loan Contribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Contributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>