ctm-sf-homeloan-app/main/default/objects/LoanContribution__c/fields/ResidentialLoanApplication__c.field-meta.xml
<CustomField>
    <fullName>ResidentialLoanApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residential Loan Application</label>
    <referenceTo>ResidentialLoanApplication__c</referenceTo>
    <relationshipLabel>Loan Contributions</relationshipLabel>
    <relationshipName>Loan_Contributions</relationshipName>
    <type>Lookup</type>
</CustomField>